--- a/login/WebContent/WEB-INF/web.xml
+++ b/login/WebContent/WEB-INF/web.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>login</display-name>
+
+  <!-- 最初に表示させたいJSPファイルを記述 -->
   <welcome-file-list>
     <welcome-file>login.jsp</welcome-file>
   </welcome-file-list>
@@ -8,7 +10,13 @@
   <!-- Struts2を有効にする -->
   <filter>
   	<filter-name>struts2</filter-name>
-  	<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareandExecuteFilter</filter-class>
+<!-- 制御担当クラス -->
+  	<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
   </filter>
-  <filter-mapping></filter-mapping>
+  <filter-mapping>
+  	<filter-name>struts2</filter-name>
+<!-- このプロジェクト(=/)の配下すべて(=*)のページということ。
+		つまり、このプロジェクト全体でstruts2を使用するということ -->
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
